infrastructure/devops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-tools
  labels:
    toolkit.fluxcd.io/tenant: sre-team
